# GeorgeAppearance

./: README.md  pyproject.toml
data/: georges.csv  non_georges.csv
lib/: datasets.py  metrics.py  show.py  trainer.py  utils.py
md_images/: README.md
notebooks/: 1.0-vam-fast-mvp.ipynb  1.1_vam_resnet50_augmentations.ipynb  1.2-vam-efficientnet-acc94.ipynb  1.2-vam-effnet-b2-fine-tuning.ipynb  TrainAndResults.ipynb
