[tool.poetry]
name = "transfer_learning_demo"
version = "0.1.0"
description = ""
authors = ["Hiyorimi <playittodeath@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wheel = "^0.36.2"
matplotlib = "^3.3.4"
numpy = "^1.20.1"
torch = "^1.7.1"
jupyter = "^1.0.0"
opencv-python = "^4.5.1"
torchvision = "^0.8.2"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
