[tool.poetry]
name = "George"
version = "0.1.0"
description = ""
authors = ["Valera <vaamiroshnik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wheel = "^0.36.2"
matplotlib = "^3.3.4"
numpy = "^1.20.1"
torch = "^1.7.1"
jupyter = "^1.0.0"
opencv-python = "^4.5.1"
torchvision = "^0.8.2"
efficientnet-pytorch = "^0.7.0"
tqdm = "^4.58.0"
urllib3 = "^1.26.3"
sklearn = "^0.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
